--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Changes for Log-Dispatch-Screen-Gentoo
 
 {{$NEXT}}
 
+    * Fix for UTF-8 messages. (Andrew Grechkin)
+
 0.002     2017-03-07 15:10:17+01:00 Europe/Amsterdam
     * Whoops. Screwed up the "optional" part of Unicode::UTF8.
 
